# Plazza

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Reception.cpp  Reception.hpp  justfile  main.cpp
.github/workflows/: jobs.yml
Communication/: CMakeLists.txt  NamedPipe.cpp  NamedPipe.hpp  Serializer.cpp  Serializer.hpp
Error/: CMakeLists.txt  Errors.cpp  Errors.hpp
Kitchen/: CMakeLists.txt  Clock.cpp  Clock.hpp  Fridge.cpp  Fridge.hpp  Kitchen.cpp  Kitchen.hpp  KitchenProcess.cpp  KitchenProcess.hpp  Process.cpp  Process.hpp  Threads.cpp  Threads.hpp
Kitchen/Pizzas/: APizza.cpp  APizza.hpp  DefaultPizzas.cpp  DefaultPizzas.hpp  Factory.cpp  Factory.hpp  Pizza.cpp  Pizza.hpp  PizzaFactory.hpp
documentation/: Clock.md  Fridge.md  NamedPipe.md  Pizza.md  Process.md  Serializer.md  ThreadPool.md
workflows/: makefile.yml
